--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -27,5 +27,5 @@ jobs:
     - name: Build
       run: npm run build
       
-    - name: Test
-      run: npm test
+    # - name: Run Next.js tests (if applicable)
+    #   run: npm run test
